--- a/main.css
+++ b/main.css
@@ -2,9 +2,10 @@
 body {
     background-color: black;
     color: white;
-    font-family: "Press Start 2P";
+    font-family: 'Press Start 2', sans-serif;
+";
     display: flex;
-    justify-content: center;
+    jdustify-content: center;
     font-size: 14px;
     cursor: pointer;
 }
