--- a/main.css
+++ b/main.css
@@ -2,10 +2,10 @@
 body {
     background-color: black;
     color: white;
-    font-family: 'Press Start 2', sans-serif;
+    font-family: 'Press Start 2P', sans-serif;
 ";
     display: flex;
-    jdustify-content: center;
+    justify-content: center;
     font-size: 14px;
     cursor: pointer;
 }
