--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 body {
     background-color: black;
     color: white;
-    font-family: 'Press Start 2P', sans-serif;
+    font-family: 'Press Start 2P';
 ";
     display: flex;
     justify-content: center;
